# fs-store-backend

./: .env  Cargo.toml  Dockerfile  diesel-setup.sh
migrations/2022-11-19-143915_create_category/: up.sql
migrations/2022-11-21-194927_create_product/: up.sql
migrations/2022-11-21-211753_create_product_category/: down.sql  up.sql
migrations/2022-12-01-105229_create_shops/: down.sql  up.sql
migrations/2022-12-01-154933_create_worktimes/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: config.rs
src/models/: category.rs  mod.rs  products.rs  products_categories.rs  results.rs  store.rs
src/repos/: mod.rs  pagination.rs
src/repos/category_repo/: category_repo.rs  mod.rs
src/repos/product_repo/: mod.rs  product_repo.rs
src/repos/store_repo/: mod.rs  store_repo.rs
src/routes/: category_routes.rs  mod.rs  product_routes.rs  store_routes.rs
src/utils/: db.rs  error_handlers.rs  mod.rs  utils.rs
